--- a/gb/23/6/9/n14013148.md
+++ b/gb/23/6/9/n14013148.md
@@ -1,70 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>苗栗县府携手青年“孵化梦想?热血飞翔”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14013149-618613-600x400.jpeg" />
 <h6>与会贵宾祝苗栗好青年创业成功。 （许享富／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年06月09日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县府多元培育青年创业，成立青年创业指挥部，不定期举办课程研习和工作坊，以提升青年相关专业能力，更选定6、7月间串联在地创业青年，在指挥部前广场举办“孵化梦想?热血飞翔”6场<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%82%E9%9B%86%E6%B4%BB%E5%8A%A8.md#1">市集活动</a>。县府劳工青年发展处9日举行市集启动仪式，16日起携手21家创业青年全面开跑。</p>
-<p>县府劳工及青年发展处指出，规划在苗栗青年创业指挥部前广场举办的6场<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%82%E9%9B%86%E6%B4%BB%E5%8A%A8.md#1">市集活动</a>，日期均选在接连的周五与周六，分别为6月16、17日，6月30日、7月1日，以及7月14、15日，市集活动时间除第16日第1场次于上午10时举办开幕仪式提早开始之外，其余各场次活动时间均自上午11时至下午5时。</p>
-<figure id="14013154" aria-describedby="caption-14013154" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013154-618618-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14013154-618618-450x300.jpeg" alt="与会贵宾祝墨湘咖啡青创业者，创业成功" width="500" /></a><figcaption id="caption-14013154" class="wp-caption-text">与会贵宾祝墨湘咖啡<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E5%88%9B%E4%B8%9A%E8%80%85.md#1">青创业者</a>，创业成功（许享富／大纪元）</figcaption></figure>
-<figure id="14013153" aria-describedby="caption-14013153" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013153-618617-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14013153-618617-450x300.jpeg" alt="与会贵宾祝旋木工坊青创业成功" width="500" /></a><figcaption id="caption-14013153" class="wp-caption-text">与会贵宾祝旋木工坊青创业成功（许享富／大纪元）</figcaption></figure>
-<figure id="14013152" aria-describedby="caption-14013152" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013152-618616-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14013152-618616-450x300.jpeg" alt="与会贵宾祝岚田茶屋青创业者创业成功 " width="500" /></a><figcaption id="caption-14013152" class="wp-caption-text">与会贵宾祝岚田茶屋<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E5%88%9B%E4%B8%9A%E8%80%85.md#1">青创业者</a>创业成功 （许享富／大纪元）</figcaption></figure>
-<figure id="14013151" aria-describedby="caption-14013151" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013151-618615-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14013151-618615-450x300.jpeg" alt="与会贵宾齐祝唐潮酒坊青创业创业成功者，酒后不开车。" width="500" /></a><figcaption id="caption-14013151" class="wp-caption-text">与会贵宾齐祝唐潮酒坊青创业创业成功者，酒后不开车。（许享富／大纪元）</figcaption></figure>
-<figure id="14013150" aria-describedby="caption-14013150" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013150-618614-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14013150-618614-450x300.jpeg" alt="钟东锦表示县府协助行销青创产业，创业青年要想办法产品吸引客人，留住客人，毕竟，做生意不能只靠“捧场”方式，否则恐无法长长久久。" width="500" /></a><figcaption id="caption-14013150" class="wp-caption-text">钟东锦表示县府协助行销青创产业，创业青年要想办法产品吸引客人，留住客人，毕竟，做生意不能只靠“捧场”方式，否则恐无法长长久久。（许享富／大纪元）</figcaption></figure>
+<p>【大纪元2023年06月09日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县府多元培育青年创业，成立青年创业指挥部，不定期举办课程研习和工作坊，以提升青年相关专业能力，更选定6、7月间串联在地创业青年，在指挥部前广场举办“孵化梦想?热血飞翔”6场市集活动。县府劳工青年发展处9日举行市集启动仪式，16日起携手21家创业青年全面开跑。</p>
+<p>县府劳工及青年发展处指出，规划在苗栗青年创业指挥部前广场举办的6场市集活动，日期均选在接连的周五与周六，分别为6月16、17日，6月30日、7月1日，以及7月14、15日，市集活动时间除第16日第1场次于上午10时举办开幕仪式提早开始之外，其余各场次活动时间均自上午11时至下午5时。</p>
+<figure id="14013154" aria-describedby="caption-14013154" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013154-618618-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14013154-618618-450x300.jpeg" alt="与会贵宾祝墨湘咖啡青创业者，创业成功" width="500" /></a><figcaption id="caption-14013154" class="wp-caption-text">与会贵宾祝墨湘咖啡青创业者，创业成功（许享富／大纪元）</figcaption></figure>
+<figure id="14013153" aria-describedby="caption-14013153" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013153-618617-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14013153-618617-450x300.jpeg" alt="与会贵宾祝旋木工坊青创业成功" width="500" /></a><figcaption id="caption-14013153" class="wp-caption-text">与会贵宾祝旋木工坊青创业成功（许享富／大纪元）</figcaption></figure>
+<figure id="14013152" aria-describedby="caption-14013152" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013152-618616-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14013152-618616-450x300.jpeg" alt="与会贵宾祝岚田茶屋青创业者创业成功 " width="500" /></a><figcaption id="caption-14013152" class="wp-caption-text">与会贵宾祝岚田茶屋青创业者创业成功 （许享富／大纪元）</figcaption></figure>
+<figure id="14013151" aria-describedby="caption-14013151" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013151-618615-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14013151-618615-450x300.jpeg" alt="与会贵宾齐祝唐潮酒坊青创业创业成功者，酒后不开车。" width="500" /></a><figcaption id="caption-14013151" class="wp-caption-text">与会贵宾齐祝唐潮酒坊青创业创业成功者，酒后不开车。（许享富／大纪元）</figcaption></figure>
+<figure id="14013150" aria-describedby="caption-14013150" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14013150-618614-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14013150-618614-450x300.jpeg" alt="钟东锦表示县府协助行销青创产业，创业青年要想办法产品吸引客人，留住客人，毕竟，做生意不能只靠“捧场”方式，否则恐无法长长久久。" width="500" /></a><figcaption id="caption-14013150" class="wp-caption-text">钟东锦表示县府协助行销青创产业，创业青年要想办法产品吸引客人，留住客人，毕竟，做生意不能只靠“捧场”方式，否则恐无法长长久久。（许享富／大纪元）</figcaption></figure>
 <p>劳青处长王浩中表示，此次串联青创业者举办市集活动，参与业者皆以县内在地店家或品牌，多为年满18至45岁的创业者为主，展售品牌种类包括文创商品、农特产品及饮食类等。为活络买气，劳青处推出多项好康，消费不限金额、可获摸彩券1张，奖品有吸尘器、空气清净机及超商礼券等；每场次前100名送气泡饮品1瓶；首场开幕当天的前50名则可获美味好物1份。</p>
 <p>县长钟东锦上午率同劳青处长王浩中、秘书林茂山，偕同县议员余文忠、杨明烨、许樱萍、徐筱菁、陈光轩、曾美露、产业总工会理事长吴炳祯及多位青年事务委员，以放飞气球方式共同主持启动仪式，宣告第1场市集活动16日起跑。</p>
 <p>钟东锦表示，开办青创市集是不错的行销方式，也很有意义，应该可以多规划办理，且搭配消费抽奖及加送好康等亮点，的确颇具吸引力；非常乐见青年返乡，不论自行创业或接棒餐饮、手工艺及农业等产业，县府都有义务走在前面引导青年朋友，并希望青年与青年委员或彼此之间，密切交流意见，相互观摩、成长，过程中还可能迸出很棒的火花，达到意想不到的效果。</p>
 <p>“创业维艰、守成不易！”钟东锦说，县府串联资源协助行销青创产业，可以吸引人潮关注市集，让上门的客人选购各种产品，但最重要的是，创业青年要想办法让自己的产品吸引客人，购买的客源自然愈多，才能达到加乘效果，这也是县府的目标；毕竟，做生意不能只靠“捧场”方式，否则恐无法长长久久。</p>
 <p>今天的启动仪式，主办单位也邀请旋木工坊、唐潮酒坊、岚田茶屋及墨湘咖啡4家青创业者，在会场展示吸睛的特色产品。县长钟东锦偕同来宾到各摊位参观，并进一步了解品项与特色，成为青创最佳代言人，也鼓励更多青年勇敢逐梦，努力实现梦想，正好契合“孵化梦想?热血飞翔”的活动主题。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/5/n13355462.md#1">东青无眠 24 点钟夜间市集活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/24/n13457186.md#1">圣塔爷圣诞大典 无眠市集活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932731.md#1">180度超美视野 空中花园逛市集、赏夜景</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956390.md#1">亚裔倡导基金会寻求原创市集活动赞助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/12/n13994755.md#1">打响在地青年品牌 基隆推动培力暨创业辅导</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998770.md#1">海洋创客学校揭牌 盼吸引游客享受海洋风情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14013160.md#1">一起顾肝！双连扶轮社赠4000剂C肝快筛试剂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/8/n14012559.md#1">鸿梅文创宣布成立“或者影响力投资”基金</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/8/n14012449.md#1">远距医疗零偏乡零距离 为恭实现就医治疗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011775.md#1">新竹市首例儿童猴痘 4岁男童遭家户感染</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/5/n13355462.md#1">东青无眠 24 点钟夜间市集活动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/24/n13457186.md#1">圣塔爷圣诞大典 无眠市集活动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/18/n13932731.md#1">180度超美视野 空中花园逛市集、赏夜景</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/23/n13956390.md#1">亚裔倡导基金会寻求原创市集活动赞助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/12/n13994755.md#1">打响在地青年品牌 基隆推动培力暨创业辅导</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/17/n13998770.md#1">海洋创客学校揭牌 盼吸引游客享受海洋风情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310432.md#1">“喘”成因多 医：突然间发生应尽速就医检查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310412.md#1">竹市“无障碍微旅行” 邀身障朋友一起去郊游</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310298.md#1">启明国小 启新国中参加捷克国际子令艺术节 县长授旗祝福</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310294.md#1">第29次县务会议 通过建筑工程基础开挖安全管理要点</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/28/n11415356.md#1" target="_blank">共产暴政录：岳父全家被杀 盛世才本人善终</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/5/n14010289.md#1">为了爱 印度穷男骑单车四个多月到瑞典寻妻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009563.md#1">美盲童濒死视力变正常 看见上帝与未来事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/2/n14008428.md#1">【未解之谜】解密507所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005825.md#1">万物有灵：忠臣义士遇难 老虎为他安葬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999286.md#1">【古道人生】十七年来不知父亲是强盗一朝真相大白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/8/n14012503.md#1">【新唐人大视野】习考察必下田？泄露心头患</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/8/n14012288.md#1">【晚间新闻】加拿大野火漫烧 纽约渥太华发警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/8/n14012548.md#1">【新闻看点】央企高管遭街拍 牵手女被起底炫富</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011445.md#1">中国第三次失业潮来袭 专家：内卷将趋严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14011303.md#1">直言不羡慕刘德华走红 汤镇业：他过得很可怜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011676.md#1">中国高考 习近平语录入作文试题引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14011303.md#1">直言不羡慕刘德华走红 汤镇业：他过得很可怜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14011240.md#1">与AKIRA结婚4周年 林志玲分享当妈心得</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14011285.md#1">容嬷嬷扮演者现身菜市 得知樱桃价格转身就走</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011519.md#1">廖峻澎澎拜访粉丝再聚首 默契与斗嘴模式依旧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011937.md#1">高圆圆晒游巴黎十年前后对比照 获赞冻龄外表</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/5/n14010547.md#1">粽子有甜有咸 中医为何偏爱这一种？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/27/n14005028.md#1">一款治疗癌症的草药茶 配方简单却被忽视</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14010912.md#1">旅馆房间内哪里适合藏钱？ 专家告诉你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011602.md#1">专家：睡觉时两腿夹枕头 对健康好处多多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007397.md#1">11招做好理财规划 享受人生退休没烦恼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/9/n14013148.htm">苗栗县府携手青年“孵化梦想?热血飞翔”</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/6/9/n14013148.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/9/n14013148.htm">苗栗县府携手青年“孵化梦想?热血飞翔”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/9/n14013148.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
